--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "swagger-ui-express": "^4.1.6"
   }
 }
